feat: add music apps icons

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <!-- Fontawesome -->
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/d778668bce.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!--====>> Google fonts <<====-->
     <link
@@ -144,6 +148,27 @@
                 <p class="tt-slide_header">
                   <span class="font-gradient">We Can Record</span><br />Anything
                 </p>
+                <h2 class="music-icons">
+                  <img
+                    src="./music-icons/youtube-music.png"
+                    alt="youtube-music"
+                  /><img src="./music-icons/spotify.png" alt="spotify" /><img
+                    src="./music-icons/deezer.png"
+                    alt="deezer"
+                  /><img
+                    src="./music-icons/soundcloud.png"
+                    alt="sound-cloud"
+                  /><img
+                    src="./music-icons/youtube.png"
+                    alt="youtube"
+                  /><img
+                    src="./music-icons/itunes.png"
+                    alt="itunes"
+                  /><img
+                    src="./music-icons/amazon-music.png"
+                    alt="amazon-music"
+                  />
+                </h2>
                 <a href="#" class="button">know more</a>
               </div>
             </div>
