fix: replace rates with pricing

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <li><a href="projects.html">PROJECTS</a></li>
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
-              <li><a href="rates.html">RATES</a></li>
+              <li><a href="pricing.html">PRICING</a></li>
               <li>
                 <a href="blog.html">BLOG</a>
                 <ul class="sub-menu">
@@ -158,10 +158,7 @@
                   /><img
                     src="./music-icons/soundcloud.png"
                     alt="sound-cloud"
-                  /><img
-                    src="./music-icons/youtube.png"
-                    alt="youtube"
-                  /><img
+                  /><img src="./music-icons/youtube.png" alt="youtube" /><img
                     src="./music-icons/itunes.png"
                     alt="itunes"
                   /><img
@@ -1841,7 +1838,7 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="rates.html">Rates</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
