--- a/rates.html
+++ b/rates.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for websmirno.site/voicer/rates.html Code by ViktorJoey, Mon, 27 Jun 2022 10:25:30 GMT -->
+  <!-- Made for websmirno.site/voicer/pricing.html Code by ViktorJoey, Mon, 27 Jun 2022 10:25:30 GMT -->
   <head>
     <title>JUDAHS RECORDS - RECORDING STUDIO HTML Template</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -35,7 +35,7 @@
     <!--====>> Index CSS <<====-->
     <link href="css/index.css" type="text/css" rel="stylesheet" />
   </head>
-  <body class="rates-page">
+  <body class="Pricing-page">
     <div class="preloader">
       <div class="loader-container">
         <div class="rectangle-1">&nbsp;</div>
@@ -95,7 +95,7 @@
               <li><a href="projects.html">PROJECTS</a></li>
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
-              <li class="active"><a href="rates.html">RATES</a></li>
+              <li class="active"><a href="pricing.html">PRICING</a></li>
               <li>
                 <a href="blog.html">BLOG</a>
                 <ul class="sub-menu">
@@ -125,10 +125,10 @@
       <div class="dark-line"></div>
       <div class="page-name-content">
         <div class="container">
-          <h1>Rates</h1>
+          <h1>Pricing</h1>
           <ul class="bread-crumbs">
             <li><a href="imdex.html">Home</a></li>
-            <li><p>Rates</p></li>
+            <li><p>Pricing</p></li>
           </ul>
         </div>
         <img
@@ -149,7 +149,7 @@
           <div class="section-header">
             <h2>Our Prices Plans</h2>
             <p>
-              We offer the best recording studio rates for true world-class
+              We offer the best recording studio Pricing for true world-class
               music production you will find anywhere
             </p>
           </div>
@@ -1007,7 +1007,7 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="rates.html">Rates</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -1249,5 +1249,5 @@
     ></script>
   </body>
 
-  <!-- Made for websmirno.site/voicer/rates.html Code by ViktorJoey, Mon, 27 Jun 2022 10:25:33 GMT -->
+  <!-- Made for websmirno.site/voicer/pricing.html Code by ViktorJoey, Mon, 27 Jun 2022 10:25:33 GMT -->
 </html>
