--- a/product.html
+++ b/product.html
@@ -95,7 +95,7 @@
               <li><a href="projects.html">PROJECTS</a></li>
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
-              <li><a href="rates.html">RATES</a></li>
+              <li><a href="pricing.html">PRICING</a></li>
               <li class="active">
                 <a href="blog.html">BLOG</a>
                 <ul class="sub-menu">
@@ -1166,7 +1166,7 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="rates.html">Rates</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
