fix: change our engineers to our artists

--- a/about.html
+++ b/about.html
@@ -861,7 +861,7 @@
           <div class="section-header">
             <h2>Our Team</h2>
             <p>
-              At Judahs Records we believe that the calibre of your engineers &
+              At Judahs Records we believe that the calibre of your artists &
               producers is just as important as the quality of the studio you
               work in
             </p>
@@ -1000,7 +1000,7 @@
         <div
           class="container pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60"
         >
-          <h2 class="bottom-line">Our Engineers</h2>
+          <h2 class="bottom-line">Our Artists</h2>
           <div class="row">
             <div class="col-6 col-lg-3">
               <ul class="no-order pt-10">
