--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@
           <div class="row">
             <div class="col-12">
               <div class="section-header">
-                <h2>Our Engineers</h2>
+                <h2>Our Artists</h2>
                 <p>
                   At Judahs Records we believe that the calibre of your
                   engineers & producers is just as important as the quality of
