--- a/gallery.html
+++ b/gallery.html
@@ -1599,11 +1599,8 @@
                 </div>
                 <div class="contact-list_text">
                   <h5>Judahs Records Recording</h5>
-                  <a
-                    href="https://goo.gl/maps/jKr6EyJPUmnzJMNU8"
-                    target="_blank"
-                    >1035 N Sycamore<br />Avenue Hollywood, CA 90040</a
-                  >
+                  Plot 2, Uyi Oryxx Uwozee Street,<br />Off Okhunwun Road,<br />Off
+                  Benin Lagos road,<br />Benin City, Edo State, Nigeria.
                 </div>
               </li>
               <li class="mb-xs-30 mb-lg-50">
@@ -1621,8 +1618,8 @@
                 </div>
                 <div class="contact-list_text">
                   <h5>Contact Phones</h5>
-                  <a href="tel:+18007654321">1 (800) 765-43-21</a>
-                  <a href="fax:+18007654323">1 (800) 765-43-23 (fax)</a>
+                  <a href="tel:+18007654321">+234 903 829 0725</a>
+                  <a href="fax:+18007654323">+234 708 599 0804</a>
                 </div>
               </li>
               <li class="mb-xs-30 mb-lg-50">
@@ -1690,7 +1687,7 @@
                   </svg>
                 </a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="#" title="Linkedin">
                   <svg
                     width="20"
@@ -1703,13 +1700,13 @@
                     />
                   </svg>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </div>
           <div class="col-12">
             <div class="footer-bottom text-center">
               <p class="mb-0">
-                &copy; 2019 Judahs Records Recording Studio. All Rights
+                &copy; 2022 Judahs Records Recording Studio. All Rights
                 Reserved.
               </p>
               <div class="footer-bottom_link text-center">
