--- a/about.html
+++ b/about.html
@@ -63,13 +63,9 @@
           <img
             src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
             class="lazy"
-            data-src="img/logo.svg"
+            data-src="img/logo.png"
             alt="logo"
           />
-          <span class="logo-text">
-            <span>JUDAHS RECORDS</span>
-            <span>RECORDING STUDIO</span>
-          </span>
         </a>
         <div class="header-right">
           <nav class="main-nav" data-menu-gradient>
@@ -865,7 +861,11 @@
           <div class="section-header">
             <h2>Our Artists</h2>
             <p>
-              Judah's Records has an outstanding team headed by Evang. Victor Ikeji whose decades of professional training, mentoring and coaching programs to over 500 individuals and music groups has earned the team tremendous results in the past years including numerous singles, tracks, EPs and albums productions.
+              Judah's Records has an outstanding team headed by Evang. Victor
+              Ikeji whose decades of professional training, mentoring and
+              coaching programs to over 500 individuals and music groups has
+              earned the team tremendous results in the past years including
+              numerous singles, tracks, EPs and albums productions.
             </p>
           </div>
           <div
@@ -924,7 +924,8 @@
                 </div>
                 <div class="desription">
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, nesciunt. Corrupti veritatis natus non aut.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Eum, nesciunt. Corrupti veritatis natus non aut.
                   </p>
                 </div>
               </div>
@@ -944,7 +945,8 @@
                 </div>
                 <div class="desription">
                   <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa quam fugit quos ipsam corrupti ratione.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Ipsa quam fugit quos ipsam corrupti ratione.
                   </p>
                 </div>
               </div>
@@ -964,7 +966,8 @@
                 </div>
                 <div class="desription">
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum officiis optio expedita dolorum tempora aspernatur.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Nostrum officiis optio expedita dolorum tempora aspernatur.
                   </p>
                 </div>
               </div>
@@ -984,7 +987,8 @@
                 </div>
                 <div class="desription">
                   <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem nulla ullam blanditiis! Ipsam, adipisci laborum!
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolorem nulla ullam blanditiis! Ipsam, adipisci laborum!
                   </p>
                 </div>
               </div>
@@ -1260,7 +1264,7 @@
               <img
                 src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
                 class="lazy"
-                data-src="img/logo.svg"
+                data-src="img/logo.png"
                 alt="logo"
               />
               <span class="logo-text">
