--- a/blog-post.html
+++ b/blog-post.html
@@ -63,13 +63,9 @@
           <img
             src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
             class="lazy"
-            data-src="img/logo.svg"
+            data-src="img/logo.png"
             alt="logo"
           />
-          <span class="logo-text">
-            <span>JUDAHS RECORDS</span>
-            <span>RECORDING STUDIO</span>
-          </span>
         </a>
         <div class="header-right">
           <nav class="main-nav" data-menu-gradient>
@@ -963,7 +959,7 @@
               <img
                 src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
                 class="lazy"
-                data-src="img/logo.svg"
+                data-src="img/logo.png"
                 alt="logo"
               />
               <span class="logo-text">
@@ -1035,9 +1031,20 @@
           </div>
           <div class="col-12">
             <ul class="social-list center mb-xs-40 mb-lg-50">
-              <li><a href="https://www.youtube.com/channel/UCeC_ql70zpNVl-6e8POReuA"><i class="fa-brands fa-youtube"></i></a></li>
-              <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
-              <li><a href="https://www.instagram.com/judahsrecords/"><i class="fa-brands fa-instagram"></i></a></li>
+              <li>
+                <a
+                  href="https://www.youtube.com/channel/UCeC_ql70zpNVl-6e8POReuA"
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/judahsrecords/"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+              </li>
             </ul>
           </div>
           <div class="col-12">
