--- a/product.html
+++ b/product.html
@@ -63,13 +63,9 @@
           <img
             src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
             class="lazy"
-            data-src="img/logo.svg"
+            data-src="img/logo.png"
             alt="logo"
           />
-          <span class="logo-text">
-            <span>JUDAHS RECORDS RECORDS</span>
-            <span>RECORDING STUDIO</span>
-          </span>
         </a>
         <div class="header-right">
           <nav class="main-nav" data-menu-gradient>
@@ -332,7 +328,7 @@
                     >buy now
                   </button>
                 </form>
-                <ul class="social-list dark small">
+                <!-- <ul class="social-list dark small">
                   <li>
                     <a href="#" title="Facebook">
                       <svg
@@ -348,7 +344,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#" title="Twitter">
+                    <a href="https://twitter.com/Judahsrecords" title="Twitter">
                       <svg
                         width="14"
                         height="19"
@@ -389,7 +385,7 @@
                       </svg>
                     </a>
                   </li>
-                </ul>
+                </ul> -->
               </div>
             </div>
             <div class="col-12">
@@ -1182,7 +1178,7 @@
               <img
                 src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
                 class="lazy"
-                data-src="img/logo.svg"
+                data-src="img/logo.png"
                 alt="logo"
               />
               <span class="logo-text">
@@ -1261,7 +1257,7 @@
                 ></a>
               </li>
               <li>
-                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://twitter.com/Judahsrecords"><i class="fa-brands fa-twitter"></i></a>
               </li>
               <li>
                 <a href="https://www.instagram.com/judahsrecords/"
