--- a/cart.html
+++ b/cart.html
@@ -63,13 +63,9 @@
           <img
             src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
             class="lazy"
-            data-src="img/logo.svg"
+            data-src="img/logo.png"
             alt="logo"
           />
-          <span class="logo-text">
-            <span>JUDAHS RECORDS RECORDS</span>
-            <span>RECORDING STUDIO</span>
-          </span>
         </a>
         <div class="header-right">
           <nav class="main-nav" data-menu-gradient>
@@ -614,7 +610,7 @@
               <img
                 src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
                 class="lazy"
-                data-src="img/logo.svg"
+                data-src="img/logo.png"
                 alt="logo"
               />
               <span class="logo-text">
