--- a/pricing.html
+++ b/pricing.html
@@ -63,13 +63,9 @@
           <img
             src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
             class="lazy"
-            data-src="img/logo.svg"
+            data-src="img/logo.png"
             alt="logo"
           />
-          <span class="logo-text">
-            <span>JUDAHS RECORDS</span>
-            <span>RECORDING STUDIO</span>
-          </span>
         </a>
         <div class="header-right">
           <nav class="main-nav" data-menu-gradient>
@@ -1023,7 +1019,7 @@
               <img
                 src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
                 class="lazy"
-                data-src="img/logo.svg"
+                data-src="img/logo.png"
                 alt="logo"
               />
               <span class="logo-text">
@@ -1102,7 +1098,7 @@
                 ></a>
               </li>
               <li>
-                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://twitter.com/Judahsrecords"><i class="fa-brands fa-twitter"></i></a>
               </li>
               <li>
                 <a href="https://www.instagram.com/judahsrecords/"
