--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <!-- Made for websmirno.site/voicer/index.html Code by ViktorJoey -->
   <head>
-    <title>JUDAHS RECORDS - RECORDING STUDIO HTML Template</title>
+    <title>Judahs Records | Recording Studio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
