--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <!-- Made for websmirno.site/voicer/blog.html Code by ViktorJoey, Mon, 27 Jun 2022 10:25:33 GMT -->
   <head>
-    <title>JUDAHS RECORDS - RECORDING STUDIO HTML Template</title>
+    <title>Blog | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -1314,5 +1314,5 @@
     ></script>
   </body>
 
-  <!-- Made for websmirno.site/voicer/blog.html Code by ViktorJoey, Mon, 27 Jun 2022 10:27:37 GMT -->
+  <!-- Made for websmirno.site/voicer/blog.html Code by ViktorJoey, Mon, 27 Jun 2019 10:27:37 GMT -->
 </html>
