--- a/equipment.html
+++ b/equipment.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <!-- Made for websmirno.site/voicer/equipment.html Code by ViktorJoey, Mon, 27 Jun 2022 10:24:29 GMT -->
   <head>
-    <title>JUDAHS RECORDS - RECORDING STUDIO HTML Template</title>
+    <title>Equipments | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
