--- a/index.html
+++ b/index.html
@@ -132,11 +132,8 @@
 				 }'
       >
         <div class="tt-slide">
-          <div class="slide-bg" data-src="img/main-slider-1.jpg">
-            <img
-              src="img/background.jpg"
-              alt="bg"
-            />
+          <div class="slide-bg" data-src="img/background.jpg">
+            <img src="img/background.jpg" alt="bg" />
           </div>
           <div class="container">
             <div class="row">
