--- a/blog-post.html
+++ b/blog-post.html
@@ -126,7 +126,7 @@
         <div class="container">
           <h1>Blog Post</h1>
           <ul class="bread-crumbs">
-            <li><a href="imdex.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><p>Computer Power - Worth Upgrading?</p></li>
           </ul>
@@ -269,7 +269,9 @@
                         ></a>
                       </li>
                       <li>
-                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://twitter.com/Judahsrecords"
+                          ><i class="fa-brands fa-twitter"></i
+                        ></a>
                       </li>
                       <li>
                         <a href="https://www.instagram.com/judahsrecords/"
@@ -790,45 +792,45 @@
                     name="my-select-country"
                     class="tt-custom-select form-control"
                   >
-                      <option value="" selected="selected">State*</option>
-                      <option value="Outside Nigeria">Outside Nigeria</option>
-                      <option value="Abuja FCT">Abuja FCT</option>
-                      <option value="Abia">Abia</option>
-                      <option value="Adamawa">Adamawa</option>
-                      <option value="Akwa Ibom">Akwa Ibom</option>
-                      <option value="Anambra">Anambra</option>
-                      <option value="Bauchi">Bauchi</option>
-                      <option value="Bayelsa">Bayelsa</option>
-                      <option value="Benue">Benue</option>
-                      <option value="Borno">Borno</option>
-                      <option value="Cross River">Cross River</option>
-                      <option value="Delta">Delta</option>
-                      <option value="Ebonyi">Ebonyi</option>
-                      <option value="Edo">Edo</option>
-                      <option value="Ekiti">Ekiti</option>
-                      <option value="Enugu">Enugu</option>
-                      <option value="Gombe">Gombe</option>
-                      <option value="Imo">Imo</option>
-                      <option value="Jigawa">Jigawa</option>
-                      <option value="Kaduna">Kaduna</option>
-                      <option value="Kano">Kano</option>
-                      <option value="Katsina">Katsina</option>
-                      <option value="Kebbi">Kebbi</option>
-                      <option value="Kogi">Kogi</option>
-                      <option value="Kwara">Kwara</option>
-                      <option value="Lagos">Lagos</option>
-                      <option value="Nassarawa">Nassarawa</option>
-                      <option value="Niger">Niger</option>
-                      <option value="Ogun">Ogun</option>
-                      <option value="Ondo">Ondo</option>
-                      <option value="Osun">Osun</option>
-                      <option value="Oyo">Oyo</option>
-                      <option value="Plateau">Plateau</option>
-                      <option value="Rivers">Rivers</option>
-                      <option value="Sokoto">Sokoto</option>
-                      <option value="Taraba">Taraba</option>
-                      <option value="Yobe">Yobe</option>
-                      <option value="Zamfara">Zamfara</option>
+                    <option value="" selected="selected">State*</option>
+                    <option value="Outside Nigeria">Outside Nigeria</option>
+                    <option value="Abuja FCT">Abuja FCT</option>
+                    <option value="Abia">Abia</option>
+                    <option value="Adamawa">Adamawa</option>
+                    <option value="Akwa Ibom">Akwa Ibom</option>
+                    <option value="Anambra">Anambra</option>
+                    <option value="Bauchi">Bauchi</option>
+                    <option value="Bayelsa">Bayelsa</option>
+                    <option value="Benue">Benue</option>
+                    <option value="Borno">Borno</option>
+                    <option value="Cross River">Cross River</option>
+                    <option value="Delta">Delta</option>
+                    <option value="Ebonyi">Ebonyi</option>
+                    <option value="Edo">Edo</option>
+                    <option value="Ekiti">Ekiti</option>
+                    <option value="Enugu">Enugu</option>
+                    <option value="Gombe">Gombe</option>
+                    <option value="Imo">Imo</option>
+                    <option value="Jigawa">Jigawa</option>
+                    <option value="Kaduna">Kaduna</option>
+                    <option value="Kano">Kano</option>
+                    <option value="Katsina">Katsina</option>
+                    <option value="Kebbi">Kebbi</option>
+                    <option value="Kogi">Kogi</option>
+                    <option value="Kwara">Kwara</option>
+                    <option value="Lagos">Lagos</option>
+                    <option value="Nassarawa">Nassarawa</option>
+                    <option value="Niger">Niger</option>
+                    <option value="Ogun">Ogun</option>
+                    <option value="Ondo">Ondo</option>
+                    <option value="Osun">Osun</option>
+                    <option value="Oyo">Oyo</option>
+                    <option value="Plateau">Plateau</option>
+                    <option value="Rivers">Rivers</option>
+                    <option value="Sokoto">Sokoto</option>
+                    <option value="Taraba">Taraba</option>
+                    <option value="Yobe">Yobe</option>
+                    <option value="Zamfara">Zamfara</option>
                   </select>
                 </span>
               </span>
@@ -1050,8 +1052,8 @@
                 </div>
                 <div class="contact-list_text">
                   <h5>Working Hours</h5>
-                  <p>Mon-Fri: 9:00 am – 5:00 pm</p>
-                  <p>Sat-Sun: 11:00 am – 16:00 pm</p>
+                  <p>Mon-Fri: --:-- am – --:-- pm</p>
+                  <p>Sat-Sun: --:-- am – --:-- pm</p>
                 </div>
               </li>
             </ul>
@@ -1065,7 +1067,9 @@
                 ></a>
               </li>
               <li>
-                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://twitter.com/Judahsrecords"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
               </li>
               <li>
                 <a href="https://www.instagram.com/judahsrecords/"
