--- a/cart.html
+++ b/cart.html
@@ -126,7 +126,7 @@
         <div class="container">
           <h1>Shop</h1>
           <ul class="bread-crumbs">
-            <li><a href="imdex.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><p>Cart</p></li>
           </ul>
@@ -728,8 +728,8 @@
                 </div>
                 <div class="contact-list_text">
                   <h5>Working Hours</h5>
-                  <p>Mon-Fri: 9:00 am – 5:00 pm</p>
-                  <p>Sat-Sun: 11:00 am – 16:00 pm</p>
+                  <p>Mon-Fri: --:-- am – --:-- pm</p>
+                  <p>Sat-Sun: --:-- am – --:-- pm</p>
                 </div>
               </li>
             </ul>
@@ -743,7 +743,9 @@
                 ></a>
               </li>
               <li>
-                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://twitter.com/Judahsrecords"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
               </li>
               <li>
                 <a href="https://www.instagram.com/judahsrecords/"
