--- a/equipment.html
+++ b/equipment.html
@@ -61,9 +61,9 @@
       <header>
         <a href="index.html" class="logo">
           <img
-            src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
+            src="./img/engineers-bg.jpg"
             class="lazy"
-            data-src="img/logo.png"
+            data-src="./img/engineers-bg.jpg"
             alt="logo"
           />
         </a>
@@ -125,16 +125,16 @@
       <div class="dark-line"></div>
       <div class="page-name-content">
         <div class="container">
-          <h1>Equipment</h1>
+          <h1>Equipments</h1>
           <ul class="bread-crumbs">
-            <li><a href="imdex.html">Home</a></li>
-            <li><p>Equipment</p></li>
+            <li><a href="index.html">Home</a></li>
+            <li><p>Equipments</p></li>
           </ul>
         </div>
         <img
           src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
           class="page-name__bg lazy"
-          data-src="./img/page-name_bg.jpg"
+          data-src="./img/engineers-bg.jpg"
           alt="bg"
         />
       </div>
@@ -162,22 +162,23 @@
                 <div class="text-block">
                   <h2>What We Use for Perfect Sound</h2>
                   <p class="h-sub">
-                    Voicer Recording Studio offer clients an endless choice of
-                    great recording studio equipment
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Pariatur natus veritatis repellendus?
                   </p>
                   <p>
-                    To get a more comprehensive idea of the gear found in Voicer
-                    Studio, please see below for our full recording studio
-                    equipment list. Every piece of equipment we own can be found
-                    here on this list, and we update it regularly for new
-                    additions (we’re always adapting to shifting musical
-                    landscape).
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolorum dolorem pariatur velit quam illo tempora iusto rerum
+                    magnam unde ab quo numquam nulla perspiciatis vero veritatis
+                    sapiente labore, maxime sunt blanditiis officia totam. Ipsum
+                    maxime vitae sed. Sit consequuntur hic rerum sint pariatur
+                    nisi sapiente iure quia. Aperiam, amet vitae!
                   </p>
                   <p>
-                    Whether you’re looking for a specific vintage ribbon mic or
-                    a rare 70’s compressor, we hope this list gives you some
-                    clarification. If you like what you see, please get in touch
-                    to book in some studio time with Voicer.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Pariatur voluptate, aspernatur dolorem dignissimos illo
+                    eligendi nulla alias autem harum consequuntur sequi dicta
+                    doloremque quisquam provident eos tempore corrupti officia
+                    incidunt!
                   </p>
                 </div>
               </div>
@@ -203,31 +204,36 @@
                 <h3>Microphones</h3>
                 <ul>
                   <li>
-                    <p>Neumann Tlm 102</p>
+                    <p>Lorem, ipsum dolor.</p>
                   </li>
                   <li>
-                    <p>Se Electronics 4400a (2 pieces)</p>
+                    <p>Lorem ipsum dolor sit.</p>
                   </li>
                   <li>
-                    <p>Blue Baby Bottle</p>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
                   </li>
                   <li>
-                    <p>AKG C451 (Stereoset)</p>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
                   </li>
                   <li>
-                    <p>Golden Age R1 (2 pieces)</p>
+                    <p>Lorem ipsum dolor sit.</p>
                   </li>
                   <li>
-                    <p>Electrovoice RE20</p>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Accusantium.
+                    </p>
                   </li>
                   <li>
-                    <p>Senheisser MD421 (3 pieces)</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
                   </li>
                   <li>
-                    <p>Senheisser E902</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
                   </li>
                   <li>
-                    <p>Shure Beta 91A</p>
+                    <p>Lorem, ipsum.</p>
                   </li>
                 </ul>
               </div>
@@ -243,31 +249,36 @@
                 <h3>Preamps / Channel Strips</h3>
                 <ul>
                   <li>
-                    <p>A-Designs Pacifica (2 channels)</p>
+                    <p>Lorem, ipsum dolor.</p>
                   </li>
                   <li>
-                    <p>Universal Audio 4-710 twinfinity / 1176 style comp</p>
+                    <p>Lorem ipsum dolor sit.</p>
                   </li>
                   <li>
-                    <p>Golden Age Pre73/comp54 (2 channels)</p>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
                   </li>
                   <li>
-                    <p>Joemeek Twin Q /comp/EQ (2 channels)</p>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
                   </li>
                   <li>
-                    <p>Audient asp 880 (8 channels)</p>
+                    <p>Lorem ipsum dolor sit.</p>
                   </li>
                   <li>
-                    <p>Rme ff800 (4 channels)</p>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Accusantium.
+                    </p>
                   </li>
                   <li>
-                    <p>Focusrite Saffire pro 40 (8 channels)</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
                   </li>
                   <li>
-                    <p>Focusrite Octopre (8 channels)</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
                   </li>
                   <li>
-                    <p>Soundcraft M8 console (8 Channels)</p>
+                    <p>Lorem, ipsum.</p>
                   </li>
                 </ul>
               </div>
@@ -283,28 +294,36 @@
                 <h3>Monitoring</h3>
                 <ul>
                   <li>
-                    <p>Focal Solo 6 + Sub ( Control Room A)</p>
+                    <p>Lorem, ipsum dolor.</p>
                   </li>
                   <li>
-                    <p>Dangerous Music Monitor ST (Control Room A)</p>
+                    <p>Lorem ipsum dolor sit.</p>
                   </li>
                   <li>
-                    <p>Focal Alpha 50 (Control Room B)</p>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
                   </li>
                   <li>
-                    <p>Avantone mixcubes (Control Room A)</p>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
                   </li>
                   <li>
-                    <p>Yamaha NSF 150 (Control Room A)</p>
+                    <p>Lorem ipsum dolor sit.</p>
                   </li>
                   <li>
-                    <p>Shure SE315 in ear monitoring</p>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Accusantium.
+                    </p>
                   </li>
                   <li>
-                    <p>Senheiser HD 215 (2 pieces)</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
                   </li>
                   <li>
-                    <p>AKG K44 (2 pieces)</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                  </li>
+                  <li>
+                    <p>Lorem, ipsum.</p>
                   </li>
                 </ul>
               </div>
@@ -320,31 +339,36 @@
                 <h3>Daw / Digital interface</h3>
                 <ul>
                   <li>
-                    <p>Mac Pro 8 core (Control Room A)</p>
+                    <p>Lorem, ipsum dolor.</p>
                   </li>
                   <li>
-                    <p>Imac 27′ I7 (Control Room B)</p>
+                    <p>Lorem ipsum dolor sit.</p>
                   </li>
                   <li>
-                    <p>RME Fireface 800 (Control Room A)</p>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
                   </li>
                   <li>
-                    <p>24 Channels Mackie MCU Pro</p>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
                   </li>
                   <li>
-                    <p>Logic Pro X, Cubase 8, Protools 10</p>
+                    <p>Lorem ipsum dolor sit.</p>
                   </li>
                   <li>
-                    <p>Native Instruments Kontakt Komplete Ultimate</p>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Accusantium.
+                    </p>
                   </li>
                   <li>
-                    <p>Softube Console 1</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
                   </li>
                   <li>
-                    <p>Softube All plugins</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
                   </li>
                   <li>
-                    <p>Soundtoys All plugins and numerous other plugins</p>
+                    <p>Lorem, ipsum.</p>
                   </li>
                 </ul>
               </div>
@@ -360,31 +384,36 @@
                 <h3>Guitar and Bass Amps</h3>
                 <ul>
                   <li>
-                    <p>Diezel Einstein 100 Watt</p>
+                    <p>Lorem, ipsum dolor.</p>
                   </li>
                   <li>
-                    <p>Marshall JCM 2000</p>
+                    <p>Lorem ipsum dolor sit.</p>
                   </li>
                   <li>
-                    <p>Supro 1624 Dualtone 24 Watt (combo)</p>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
                   </li>
                   <li>
-                    <p>Peavey 6505 100 Watt</p>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
                   </li>
                   <li>
-                    <p>Kourbis Custom Plexi Amp 50 Watt</p>
+                    <p>Lorem ipsum dolor sit.</p>
                   </li>
                   <li>
-                    <p>B-52 100 Watt</p>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Accusantium.
+                    </p>
                   </li>
                   <li>
-                    <p>Orange Tiny Terror 15 Watt</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
                   </li>
                   <li>
-                    <p>Bugera 333 100 Watt (combo)</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
                   </li>
                   <li>
-                    <p>Gallien Krueger 700 RB 2 480 watt</p>
+                    <p>Lorem, ipsum.</p>
                   </li>
                 </ul>
               </div>
@@ -471,7 +500,7 @@
             </div>
             <div class="tt-form-row">
               <span class="tt-form-control tt-form-control_66">
-                <input type="text" name="addres" placeholder="Address" />
+                <input type="text" name="address" placeholder="Address" />
               </span>
               <span class="tt-form-control tt-form-control_33">
                 <span class="selectWrapper">
@@ -479,45 +508,45 @@
                     name="my-select-country"
                     class="tt-custom-select form-control"
                   >
-                      <option value="" selected="selected">State*</option>
-                      <option value="Outside Nigeria">Outside Nigeria</option>
-                      <option value="Abuja FCT">Abuja FCT</option>
-                      <option value="Abia">Abia</option>
-                      <option value="Adamawa">Adamawa</option>
-                      <option value="Akwa Ibom">Akwa Ibom</option>
-                      <option value="Anambra">Anambra</option>
-                      <option value="Bauchi">Bauchi</option>
-                      <option value="Bayelsa">Bayelsa</option>
-                      <option value="Benue">Benue</option>
-                      <option value="Borno">Borno</option>
-                      <option value="Cross River">Cross River</option>
-                      <option value="Delta">Delta</option>
-                      <option value="Ebonyi">Ebonyi</option>
-                      <option value="Edo">Edo</option>
-                      <option value="Ekiti">Ekiti</option>
-                      <option value="Enugu">Enugu</option>
-                      <option value="Gombe">Gombe</option>
-                      <option value="Imo">Imo</option>
-                      <option value="Jigawa">Jigawa</option>
-                      <option value="Kaduna">Kaduna</option>
-                      <option value="Kano">Kano</option>
-                      <option value="Katsina">Katsina</option>
-                      <option value="Kebbi">Kebbi</option>
-                      <option value="Kogi">Kogi</option>
-                      <option value="Kwara">Kwara</option>
-                      <option value="Lagos">Lagos</option>
-                      <option value="Nassarawa">Nassarawa</option>
-                      <option value="Niger">Niger</option>
-                      <option value="Ogun">Ogun</option>
-                      <option value="Ondo">Ondo</option>
-                      <option value="Osun">Osun</option>
-                      <option value="Oyo">Oyo</option>
-                      <option value="Plateau">Plateau</option>
-                      <option value="Rivers">Rivers</option>
-                      <option value="Sokoto">Sokoto</option>
-                      <option value="Taraba">Taraba</option>
-                      <option value="Yobe">Yobe</option>
-                      <option value="Zamfara">Zamfara</option>
+                    <option value="" selected="selected">State*</option>
+                    <option value="Outside Nigeria">Outside Nigeria</option>
+                    <option value="Abuja FCT">Abuja FCT</option>
+                    <option value="Abia">Abia</option>
+                    <option value="Adamawa">Adamawa</option>
+                    <option value="Akwa Ibom">Akwa Ibom</option>
+                    <option value="Anambra">Anambra</option>
+                    <option value="Bauchi">Bauchi</option>
+                    <option value="Bayelsa">Bayelsa</option>
+                    <option value="Benue">Benue</option>
+                    <option value="Borno">Borno</option>
+                    <option value="Cross River">Cross River</option>
+                    <option value="Delta">Delta</option>
+                    <option value="Ebonyi">Ebonyi</option>
+                    <option value="Edo">Edo</option>
+                    <option value="Ekiti">Ekiti</option>
+                    <option value="Enugu">Enugu</option>
+                    <option value="Gombe">Gombe</option>
+                    <option value="Imo">Imo</option>
+                    <option value="Jigawa">Jigawa</option>
+                    <option value="Kaduna">Kaduna</option>
+                    <option value="Kano">Kano</option>
+                    <option value="Katsina">Katsina</option>
+                    <option value="Kebbi">Kebbi</option>
+                    <option value="Kogi">Kogi</option>
+                    <option value="Kwara">Kwara</option>
+                    <option value="Lagos">Lagos</option>
+                    <option value="Nassarawa">Nassarawa</option>
+                    <option value="Niger">Niger</option>
+                    <option value="Ogun">Ogun</option>
+                    <option value="Ondo">Ondo</option>
+                    <option value="Osun">Osun</option>
+                    <option value="Oyo">Oyo</option>
+                    <option value="Plateau">Plateau</option>
+                    <option value="Rivers">Rivers</option>
+                    <option value="Sokoto">Sokoto</option>
+                    <option value="Taraba">Taraba</option>
+                    <option value="Yobe">Yobe</option>
+                    <option value="Zamfara">Zamfara</option>
                   </select>
                 </span>
               </span>
@@ -666,7 +695,6 @@
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="blog.html">Blog</a></li>
-
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -740,8 +768,8 @@
                 </div>
                 <div class="contact-list_text">
                   <h5>Working Hours</h5>
-                  <p>Mon-Fri: 9:00 am – 5:00 pm</p>
-                  <p>Sat-Sun: 11:00 am – 16:00 pm</p>
+                  <p>Mon-Fri: --:-- am – --:--</p>
+                  <p>Sat-Sun: --:-- am – --:--</p>
                 </div>
               </li>
             </ul>
@@ -755,7 +783,9 @@
                 ></a>
               </li>
               <li>
-                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://twitter.com/Judahsrecords"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
               </li>
               <li>
                 <a href="https://www.instagram.com/judahsrecords/"
