--- a/pricing.html
+++ b/pricing.html
@@ -127,7 +127,7 @@
         <div class="container">
           <h1>Pricing</h1>
           <ul class="bread-crumbs">
-            <li><a href="imdex.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><p>Pricing</p></li>
           </ul>
         </div>
@@ -1110,8 +1110,8 @@
                 </div>
                 <div class="contact-list_text">
                   <h5>Working Hours</h5>
-                  <p>Mon-Fri: 9:00 am – 5:00 pm</p>
-                  <p>Sat-Sun: 11:00 am – 16:00 pm</p>
+                  <p>Mon-Fri: --:-- am – --:-- pm</p>
+                  <p>Sat-Sun: --:-- am – --:-- pm</p>
                 </div>
               </li>
             </ul>
