--- a/projects.html
+++ b/projects.html
@@ -127,14 +127,14 @@
         <div class="container">
           <h1>Projects</h1>
           <ul class="bread-crumbs">
-            <li><a href="imdex.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><p>Projects</p></li>
           </ul>
         </div>
         <img
           src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
           class="page-name__bg lazy"
-          data-src="./img/page-name_bg.jpg"
+          data-src="./img/clients-bg.jpg"
           alt="bg"
         />
       </div>
@@ -150,16 +150,16 @@
                 <h2>Latest Projects</h2>
                 <p class="h-sub">
                   Explore below to learn more about the breadth of projects
-                  Judahs Records has taken on in the past few years
+                  Judahs Records has taken on in the past few years.
                 </p>
                 <p>
-                  We’re specialized in recording entire albums from start to
-                  finish. We prefer to get invested in a project and share ideas
-                  with the artist. Recording only one or more instruments is of
-                  course also an option. We guarantee to deliver any project
-                  related files in its desired state for future processes. Over
-                  the years our microphone locker has increased in size and
-                  quality, ranging from vintage to modern.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Provident blanditiis voluptates quo earum, similique
+                  accusantium, alias veniam dolore natus dolores minus id error
+                  optio eius laudantium at voluptatibus rem doloremque maiores
+                  soluta. Veniam explicabo quaerat quia id, repudiandae quis
+                  reiciendis nulla hic, ad cupiditate quisquam tempore suscipit,
+                  saepe error. Consequatur?
                 </p>
                 <div class="project-ico-list">
                   <div class="project-ico__item">
@@ -478,7 +478,7 @@
               </div>
             </div>
           </div>
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-12 pt-xs-25 pt-md-25 pt-lg-60">
               <div class="section-header">
                 <h2>Featured Sounds</h2>
@@ -1675,7 +1675,7 @@
                 >view more photos
               </a>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <!-- End projects -->
@@ -1996,8 +1996,8 @@
                 </div>
                 <div class="contact-list_text">
                   <h5>Working Hours</h5>
-                  <p>Mon-Fri: 9:00 am – 5:00 pm</p>
-                  <p>Sat-Sun: 11:00 am – 16:00 pm</p>
+                  <p>Mon-Fri: --:-- am – --:-- pm</p>
+                  <p>Sat-Sun: --:-- am – --:-- pm</p>
                 </div>
               </li>
             </ul>
@@ -2011,7 +2011,9 @@
                 ></a>
               </li>
               <li>
-                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://twitter.com/Judahsrecords"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
               </li>
               <li>
                 <a href="https://www.instagram.com/judahsrecords/"
