Remove product, cart, shop

--- a/services.html
+++ b/services.html
@@ -101,9 +101,6 @@
                 <ul class="sub-menu">
                   <li><a href="blog.html">BLOG</a></li>
                   <li><a href="blog-post.html">Blog post</a></li>
-                  <li><a href="shop.html">Products</a></li>
-                  <li><a href="product.html">Single Product</a></li>
-                  <li><a href="cart.html">Cart</a></li>
                 </ul>
               </li>
 
@@ -134,7 +131,7 @@
         <img
           src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
           class="page-name__bg lazy"
-          data-src="./img/page-name_bg.jpg"
+          data-src="./img/post-author-bg.jpg"
           alt="bg"
         />
       </div>
@@ -148,8 +145,9 @@
           <div class="section-header">
             <h2>What We Do Best</h2>
             <p>
-              Our team will help you find the missing piece of your music with
-              state-of-the-art equipment and years of experience
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
+              adipisci facere quaerat corrupti perferendis similique expedita
+              molestiae sequi illo accusamus.
             </p>
           </div>
         </div>
@@ -169,12 +167,12 @@
                 <div>
                   <h2 class="font-gradient">Recording</h2>
                   <p>
-                    24 channels of simultaneous recording in three isolation
-                    booths and a big room
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Totam dolorem incidunt delectus perspiciatis nisi eligendi?
                   </p>
                 </div>
                 <div class="price">
-                  <span><span>$</span>35</span>
+                  <span><span>₦</span>35</span>
                   hour
                 </div>
               </div>
@@ -197,7 +195,7 @@
                   </p>
                 </div>
                 <div class="price">
-                  <span><span>$</span>55</span>
+                  <span><span>₦</span>55</span>
                   hour
                 </div>
               </div>
@@ -217,7 +215,7 @@
                   <p>We outsource all mastering services. Ask us who we use</p>
                 </div>
                 <div class="price">
-                  <span><span>$</span>55</span>
+                  <span><span>₦</span>55</span>
                   hour
                 </div>
               </div>
@@ -234,7 +232,7 @@
               <div class="text">
                 <div><h2 class="font-gradient">Engineering</h2></div>
                 <div class="price">
-                  <span><span>$</span>75</span>
+                  <span><span>₦</span>75</span>
                   hour
                 </div>
               </div>
@@ -251,7 +249,7 @@
               <div class="text">
                 <div><h2 class="font-gradient">Post Production</h2></div>
                 <div class="price">
-                  <span><span>$</span>35</span>
+                  <span><span>₦</span>35</span>
                   hour
                 </div>
               </div>
@@ -271,7 +269,7 @@
                   <p>Songwriting, arranging, session playing, producing</p>
                 </div>
                 <div class="price">
-                  <span><span>$</span>95</span>
+                  <span><span>₦</span>95</span>
                   hour
                 </div>
               </div>
@@ -298,7 +296,7 @@
                 <div class="hr">1 hr</div>
               </div>
               <div class="right">
-                <p>$45.00</p>
+                <p>₦00.00</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -324,7 +322,7 @@
                 <div class="hr">2 hr</div>
               </div>
               <div class="right">
-                <p>$90.00</p>
+                <p>₦00.00</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -350,7 +348,7 @@
                 <div class="hr">4 hr</div>
               </div>
               <div class="right">
-                <p>$180.00</p>
+                <p>₦000.00</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -376,7 +374,7 @@
                 <div class="hr">6 hr</div>
               </div>
               <div class="right">
-                <p>$270.00</p>
+                <p>₦000.00</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -402,7 +400,7 @@
                 <div class="hr">8 hr</div>
               </div>
               <div class="right">
-                <p>$360.00</p>
+                <p>₦000.00</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -428,7 +426,7 @@
                 <div class="hr">10 hr</div>
               </div>
               <div class="right">
-                <p>$450.00</p>
+                <p>₦000.00</p>
                 <a href="#bookingPopup" class="open-popup-link">
                   <svg
                     class="icon icon-mic"
@@ -498,7 +496,7 @@
                 fill="#FF6600"
               />
             </svg>
-            1-800-765-43-21</a
+            +234 903 829 0725</a
           >
         </div>
       </section>
@@ -570,9 +568,8 @@
                 </div>
                 <h4>Recording</h4>
                 <p>
-                  We work with rock bands, jazz ensembles, string sections,
-                  brass sections, big bands, gospel choirs, and everything in
-                  between.
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Rerum, molestiae?
                 </p>
               </div>
             </div>
@@ -785,8 +782,8 @@
                 </div>
                 <h4>Production</h4>
                 <p>
-                  Our in-house production team, can provide a variety of
-                  services depending on your music projects needs.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Laboriosam tempore reprehenderit quo ab. Sit, sapiente?
                 </p>
               </div>
             </div>
@@ -834,8 +831,8 @@
                 </div>
                 <h4>Editing</h4>
                 <p>
-                  We offer vocal tuning, drum alignment, and a variety of ways
-                  to help clean up and organize your recording sessions.
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Molestiae, quod? Obcaecati, animi voluptates?
                 </p>
               </div>
             </div>
@@ -919,8 +916,8 @@
                 </div>
                 <h4>Video Shoots</h4>
                 <p>
-                  Judahs Records Recording Studio classic studio look and feel
-                  makes it the perfect place for bands to shoot music videos.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Impedit cupiditate voluptates iusto eligendi, ex repellendus.
                 </p>
               </div>
             </div>
@@ -968,8 +965,8 @@
                 </div>
                 <h4>Voice Over</h4>
                 <p>
-                  We have all of the high end microphones and outboard to give
-                  the proper presence your voice over needs.
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Libero, harum.
                 </p>
               </div>
             </div>
@@ -1047,9 +1044,8 @@
                 </div>
                 <h4>Sound Design</h4>
                 <p>
-                  Whether it is post production for film or a music track that
-                  needs a bigger sound, we can help bring to life whatever it is
-                  you hear in your head.
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Optio eos suscipit adipisci eum saepe.
                 </p>
               </div>
             </div>
